# checkPeerAsterisk

./: .gitignore  README.MD  pyproject.toml
relatorios/: full_analitico_RAFAEL-W10.xlsx  full_sintetico_RAFAEL-W10.xlsx  message_analitico_RAFAEL-W10.xlsx  message_sintetico_RAFAEL-W10.xlsx
src/: __init__.py  app.py
src/functions/: args.py  full.py  message.py  saveExcel.py
src/helper/: remover_duplicatas.py
