[tool.poetry]
name = "check-peer-asterisk-python"
version = "0.1.0"
description = ""
authors = ["Rafael"]
packages = [
    { include = "src" },
    { include = "src/**/*.py" }
]

[tool.poetry.dependencies]
python = "^3.9"
DateTime = "^5.5"
argparse = "^1.4.0"
pandas = "^2.2.2"
openpyxl = "^3.1.5"

[tool.poetry.scripts]
start = "src.__init__:init"
check_peer = "src.__init__:init"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
